--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -86,6 +86,7 @@ h2 {
     transform: rotateY(0deg);
 }
 
-.boxOpen::after{
+.boxOpen::after,
+.boxMatch::after{
     transform: rotateY(180deg);
 }
